# url-shortener

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  dockerfile  init_db.py  makefile  pyproject.toml  requirements.txt  setup.cfg  urls.db  wsgi.py
.github/workflows/: check-lint.yml
app/: __init__.py  app.py  config.py  main.py  models.py  routes.py  views.py
app/templates/: about.html  base.html  index.html  stats.html
migrations/versions/: 134820b89c04_initial_migration.py  1af5376ec439_initial_migration.py
templates/: base.html  index.html
tests/: fixtures.py  test_models.py  test_routes.py
