[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["emp7yhead <artyomkropp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
hashids = "^1.3.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.1"
gunicorn = "^20.1.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
